ASB-279 Add filter options and counts
